--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -2,7 +2,7 @@ vich_uploader:
     db_driver: orm
 
     mappings:
-       image_question:
+       question_image:
            uri_prefix: /images/questions
            upload_destination: '%kernel.project_dir%/public/images/assets/imgs'
            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
